# dino-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/dino-cli/: Cargo.toml
crates/dino-cli/src/: main.rs
crates/dino-core/: Cargo.toml
crates/dino-core/src/: lib.rs
crates/dino-io/: Cargo.toml
crates/dino-io/src/: lib.rs
crates/dino-quant/: Cargo.toml  README.md
crates/dino-quant/src/: lib.rs  main.rs  reference_cache.rs  retrieval.rs
crates/dino-quant/tests/: cli_contract.rs
crates/dino-seq/: .gitignore  BENCHMARKING.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
crates/dino-seq/.github/: pull_request_template.md
crates/dino-seq/.github/ISSUE_TEMPLATE/: benchmark_claim.yml  config.yml  feature_request.yml  parser_bug.yml
crates/dino-seq/.github/workflows/: ci.yml
crates/dino-seq/benches/: throughput.rs
crates/dino-seq/docs/: API_SURFACE.md  FRAMEWORK.md  PUBLISHING.md  RELEASE_AUDIT.md  REPLICATION.md
crates/dino-seq/docs/benchmarks/: CORPUS.md
crates/dino-seq/docs/benchmarks/drosophila-1m/: external-parity.tsv  external-tools.tsv  metadata.md  microraptor-gauntlet.jsonl  summary.md
crates/dino-seq/docs/benchmarks/drosophila-compressed/: external-parity.tsv  external-tools.tsv  input-manifest.tsv  metadata.md  microraptor-gauntlet.jsonl  summary.md
crates/dino-seq/docs/benchmarks/drosophila-read-types/: external-parity.tsv  external-tools.tsv  metadata.md  microraptor-gauntlet.jsonl  summary.md
crates/dino-seq/docs/benchmarks/fasta-gauntlet/: external-parity.tsv  external-tools.tsv  metadata.md  microraptor-fasta-gauntlet.jsonl  microraptor-memory.tsv  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/: fasta-peer-size-sweep.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/gzip-10000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/gzip-100000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/gzip-1000000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/gzip-50000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/gzip-500000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/raw-10000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/raw-100000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/raw-1000000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/raw-50000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peer-size-sweep/runs/raw-500000/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/fasta-peers/: fasta-library-peers.tsv  metadata.md  summary.md
crates/dino-seq/docs/benchmarks/independent-organisms/: external-parity.tsv  external-tools.tsv  input-manifest.tsv  metadata.md  microraptor-gauntlet.jsonl  summary.md
crates/dino-seq/docs/benchmarks/latest/: external-parity.tsv  external-tools.tsv  metadata.md  microraptor-gauntlet.jsonl  summary.md
crates/dino-seq/docs/benchmarks/rust-peers/: metadata.md  rust-library-peers.tsv  summary.md
crates/dino-seq/docs/benchmarks/rust-peers-drosophila-r1/: metadata.md  rust-library-peers.tsv  summary.md
crates/dino-seq/examples/: fastq_chunk_sink.rs
crates/dino-seq/fuzz/: .gitignore  Cargo.toml  deny.toml
crates/dino-seq/fuzz/corpus/fastq_reader/: invalid-plus.fastq  truncated.fastq  valid-small.fastq
crates/dino-seq/fuzz/fuzz_targets/: bgzf_roundtrip.rs  fasta_reader.rs  fastq_reader.rs  pack.rs
crates/dino-seq/scripts/: asm-pack.sh  bench.sh  benchmark-common.sh  benchmark-fasta-gauntlet.sh  benchmark-fasta-peer-size-sweep.sh  benchmark-fasta-peers.sh  benchmark-gauntlet.sh  benchmark-rust-peer-size-sweep.sh  benchmark-rust-peers.sh  check-benchmark-snapshots.sh  check-bgzf-pack-regression.sh  check-fuzz-corpus.sh  check-pack-instructions.sh  check-pack-regression.sh  check-replication-host.sh  check-slab-autotune.sh  discover-local-benchmark-corpus.sh  export-replication-kit.sh  prepare-real-benchmark-inputs.sh  profile-hotpath.sh  profile-perf.sh  release-gate.sh  render-benchmark-report.sh
crates/dino-seq/scripts/peer-harness/fasta/: Cargo.toml.in  main.rs
crates/dino-seq/scripts/peer-harness/rust-fastq/: Cargo.toml.in  main.rs
crates/dino-seq/src/: benchutil.rs  bgzf.rs  error.rs  fasta.rs  fastq.rs  fastq_frame.rs  lib.rs  mmap.rs  pack.rs  scan.rs  scan_asm_x86_64.rs  source.rs  stream.rs
crates/dino-seq/src/bgzf/: tests.rs
crates/dino-seq/src/fasta/: tests.rs
crates/dino-seq/src/fastq/: chunk.rs  frame.rs  pair.rs  record.rs  tests.rs
crates/dino-seq/src/pack/: tests.rs
crates/dino-seq/tests/: cli.rs
crates/dino-seq/tools/perf/: README.md  run.sh
crates/dino-seq/tools/perf/gungraun/: Cargo.toml  README.md
crates/dino-seq/tools/perf/gungraun/benches/: hotpaths.rs
dna/: .gitignore  Cargo.toml  LICENSE  README.md
dna/src/: lib.rs  main.rs
dna/tools/: generate_gifs.py
docs/: NAMING.md  WORKSPACE.md
docs/tools/: README.md  dino-seq.md  microraptor.md
lab/: README.md  datasets.tsv  matrix.tsv  runs.tsv  tools.tsv
scripts/: quant-lab
