[package]
name = "dino-cli"
version = "0.1.0"
description = "Umbrella discovery command for the Dino Tools bioinformatics suite"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "dino"
path = "src/main.rs"

[dependencies]
dino-core = { path = "../dino-core", version = "0.1.0" }
