[package]
name = "dino-seq"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Streaming FASTQ and FASTA parsing core for raw, gzip, and BGZF inputs"
readme = "README.md"
repository = "https://github.com/Jakeelamb/dino-tools"
homepage = "https://github.com/Jakeelamb/dino-tools"
documentation = "https://docs.rs/dino-seq"
keywords = ["fastq", "fasta", "bioinformatics", "bgzf", "sequencing"]
categories = ["science", "parser-implementations"]
rust-version = "1.87"

[lib]
name = "dino_seq"

[[bin]]
name = "dino-seq"
path = "src/bin/dino_seq.rs"

[[bin]]
name = "dino-seq-bench"
path = "src/bin/dino_seq_bench.rs"

[[bin]]
name = "dino-seq-fixture"
path = "src/bin/dino_seq_fixture.rs"

[dependencies]
crc32fast = { version = "1.5", optional = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true }
libdeflater = { version = "1.25.2", optional = true }
memmap2 = { version = "0.9", optional = true }
memchr = "2.7"

[features]
default = ["bgzf", "gzip"]
bgzf = ["dep:crc32fast", "dep:flate2"]
gzip = ["dep:flate2"]
libdeflate = ["bgzf", "dep:libdeflater"]
mmap = ["dep:memmap2"]
pure-rust-compression = ["bgzf", "gzip"]
simd = []
asm-scan = []

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"

[[bench]]
name = "throughput"
harness = false
