[package]
name = "dino-seq"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Low-allocation FASTQ and FASTA parser core"
readme = "README.md"
repository = "https://github.com/Jakeelamb/dino-tools"
homepage = "https://github.com/Jakeelamb/dino-tools"
documentation = "https://docs.rs/dino-seq"
keywords = ["fastq", "fasta", "bioinformatics", "bgzf", "sequencing"]
categories = ["science", "parser-implementations"]
rust-version = "1.87"
include = [
    "/Cargo.toml",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/src/**",
]

[lib]
name = "dino_seq"

[[bin]]
name = "dino-seq"
path = "src/bin/dino_seq.rs"

[dependencies]
crc32fast = { version = "1.5", optional = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true }
libdeflater = { version = "1.25.2", optional = true }
memmap2 = { version = "0.9", optional = true }
memchr = "2.7"

[features]
default = []
bgzf = ["dep:crc32fast", "dep:flate2"]
gzip = ["dep:flate2"]
libdeflate = ["bgzf", "dep:libdeflater"]
mmap = ["dep:memmap2"]
transport = ["bgzf", "gzip"]
pure-rust-compression = ["transport"]
simd = []
asm-scan = []

[lints.rust]
unsafe_code = "allow"

[[bench]]
name = "throughput"
harness = false
